--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # REPLACE THIS WITH YOUR ACTUAL KEY
-GEMINI_API_KEY=AIzaSyDNpb7J3xRMb_087znvrhzApY0FQ4IHlYM
+GEMINI_API_KEY=
 CHROMA_DB_DIR=chroma_data
