--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.1.5+1
   http: ^1.6.0
   gpt_markdown: ^1.1.5
+  firebase_core: ^4.4.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
